--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
-.App {
+body{
+  margin-top: 50px;
   text-align: center;
+  background-color: rgb(52, 100, 100);
+  font-size: calc(20px + 2vmin);
+}
+.App {
+  padding: 30px;
 }
 
 .App-logo {
@@ -7,32 +13,14 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  background-color: #a8c6c9;
+  min-height: 60vh;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(2, 2, 2);
+  
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
